Fix z-index value importing to fix a stacking problem with the about page and the detail header

--- a/src/components/AppHeader/AboutPage.css
+++ b/src/components/AppHeader/AboutPage.css
@@ -1,4 +1,5 @@
 @value c-app-bg from '../Constants.css';
+@value z-about from '../Constants.css';
 
 .AboutPage {
   background-color: c-app-bg;
@@ -10,6 +11,7 @@
   position: absolute;
   transition: transform 0.2s linear, top 0.2s linear;
   width: 100%;
+  z-index: z-about;
 
   h2 {
     font-size: 28px;
